add the profile link

--- a/css/style.css
+++ b/css/style.css
@@ -574,13 +574,16 @@ img{
   padding-top: 45px;
 }
 .footer__contact{
+  margin-bottom: 26px;
+}
+.footer__contact-link{
+  text-decoration: none;
   color: #000;
   font-family: 'Forum';
   font-size: 19px;
   font-style: normal;
   font-weight: 400;
   line-height: 23px;
-  margin-bottom: 26px;
 }
 .footer__img-wrapper{
   text-align: right;
