--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,11 @@ img{
   text-transform: uppercase;
   font-family: 'Montserrat';
   text-align: center;
+  background-color: #e8cfca;
 }
 .header{
   padding-top: 5px;
+  margin-bottom: 20px;
 }
 .header__wrapper{
   display: flex;
@@ -33,9 +35,6 @@ img{
 }
 .header__logo{
   width: 30%;
-}
-.header__owner{
-  font-size: 28px;
 }
 .header__title{
   font-weight: 400;
@@ -49,29 +48,53 @@ img{
   color: black;
   text-decoration: none;
 }
-.header__down{
-  height: 84px;
-  border: 0;
-  background-color: #e8cfca;
+.header__owner{
+  font-size: 28px;
 }
 .main{
-  height: 558px;
-  margin: -60px auto 0;
-  background: url(../images/site-bg.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  margin-bottom: 57px;
+  margin-bottom: 25px;
 }
-.main__subtitles{
-  padding-top: 135px;
+.header__down{
+  width: 100%;
+  padding: 15px 0 18px 0;
+  height: 84px;
+  border: 0;
+  text-align: center;
+  font-size: 18px;
+  font-family: 'Montserrat';
+  font-weight: 400;
+  background-color: #e8cfca;
+}
+.main__image-wrapper{
+  margin: -30px 0 25px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.main__getstudy{
+  font-family: 'Montserrat';
+  font-weight: 400;
+}
+.main__getstudy-tel{
+  font-family: 'Montserrat';
+  font-weight: 400;
+  color: black;
+  text-decoration-style: dotted;
+}
+.services{
+  margin-bottom: 40px;
+}
+.services__title{
+  padding: 20px 0;
+  margin-bottom: 25px;
+}
+.services__list{
+  font-family: 'Montserrat';
+  list-style: none;
   text-align: center;
 }
-.main__subtitle{
-  color: white;
-  font-family: 'Arimo';
-  font-size: 20px;
-  margin-bottom: 50px;
+.services__list-item:not(:last-child){
+  margin-bottom: 25px;
 }
 .place{
   margin-bottom: 49px;
@@ -107,6 +130,9 @@ img{
   width: 50%;
 }
 .why__title{
+  text-transform: uppercase;
+  font-family: 'Montserrat';
+  font-weight: 500;
   text-align: left;
   font-size: 27px;
 }
@@ -143,6 +169,12 @@ img{
   border-left: 2px solid #EBD7D0;
   padding-left: 20px;
   margin-bottom: 36px;
+}
+.why__wouldyou{
+  text-align: center;
+  font-family: 'Poiret One';
+  font-weight: 400;
+  font-size: 22px;
 }
 .why__frame{
   position: relative;
@@ -191,9 +223,10 @@ img{
   top: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-}
-.results__title{
-  font-size: 27px;
+  font-size: 22px;
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-weight: 400;
 }
 .results__img-wrapper{
   display: flex;
@@ -241,7 +274,7 @@ img{
   margin-left: -55px;
 }
 .ways{
-  padding-bottom: 15px;
+  padding-bottom: 25px;
 }
 .ways__title{
   padding: 15px 0;
@@ -330,7 +363,6 @@ img{
 .for-start{
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: -46px;
 }
 .for__title-wrapper{
   position: relative;
@@ -339,7 +371,6 @@ img{
 .for__block-title{
   display: block;
   padding: 15px 0;
-  margin-bottom: 15px;  
   color: black;
   text-align: center;
   font-family: 'Montserrat';
@@ -387,7 +418,6 @@ img{
   padding: 20px;
   margin-bottom: 15px;
 }
-
 .for__img-1{
   padding-top: 20px;
   margin-top: 70px;
@@ -541,6 +571,7 @@ img{
 }
 .price__title{
   margin-bottom: 50%;
+  background-color: transparent;
 }
 .price__text{
   display: inline-flex;
@@ -572,6 +603,7 @@ img{
 .price__bonus{
   background-color: #e8cfca;
   width: 100%;
+  margin: -60px 0 35px 0;
 }
 .price__cond{
   color: #201E1E;
@@ -592,6 +624,9 @@ img{
 .footer{
   text-align: center;
   padding-top: 45px;
+}
+.footer__contact-title{
+  background-color: transparent;
 }
 .footer__contact{
   margin-bottom: 26px;
