--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ img{
 .main__getstudy{
   font-family: 'Montserrat';
   font-weight: 400;
+  text-align: center;
 }
 .main__links-wrapper{
   display: inline-flex;
@@ -121,6 +122,7 @@ img{
 }
 .place__info{
   color: #201E1E;
+  text-transform: uppercase;
   text-align: center;
   font-family: 'Arimo';
   font-size: 17px;
@@ -298,7 +300,7 @@ img{
   margin-left: -55px;
 }
 .ways{
-  padding-bottom: 25px;
+  padding-bottom: 40px;
 }
 .ways__title{
   padding: 15px 0;
