--- a/css/style.css
+++ b/css/style.css
@@ -85,9 +85,10 @@ img{
   gap: 4px;
 }
 .main__getstudy-tel{
+  line-height: 30px;
+  font-weight: 500;
   font-size: 18px;
   font-family: 'Montserrat';
-  font-weight: 400;
   color: black;
   text-decoration-style: dotted;
 }
@@ -104,7 +105,8 @@ img{
   text-align: center;
 }
 .services__list-item{
-  font-size: 24px;
+  font-size: 18px;
+  font-weight: 600;
 }
 .services__list-item:not(:last-child){
   margin-bottom: 25px;
@@ -125,7 +127,7 @@ img{
   text-transform: uppercase;
   text-align: center;
   font-family: 'Arimo';
-  font-size: 17px;
+  font-size: 18px;
   line-height: 23px;
 }
 .why{
@@ -452,7 +454,7 @@ img{
 }
 .for__img{
   z-index: 5;
-  width: 40%;
+  width: 44%;
   border: 1px solid black;
 }
 .for__img:first-child{
@@ -462,11 +464,20 @@ img{
   margin-left: -30px;
 }
 .for__text-block{
-  font-family: 'arimo';
   text-transform: uppercase;
-  background-color: rgba(194, 168, 162, 0.8);
+  font-family: 'Montserrat';
+  font-size: 18px;
   padding: 20px;
   margin-bottom: 15px;
+}
+.for__text-note{
+  margin: 0 auto 50px auto;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat';
+  font-size: 18px;
+  font-weight: 700;
+  width: 90%;
 }
 .second-fig{
   text-align: right;
@@ -541,12 +552,15 @@ img{
   margin-bottom: 10px;
 }
 .about__info{
+  margin: 0 auto;
   color: #201E1E;
   font-family: 'Arimo';
   font-size: 12px;
+  text-align: left;
   font-style: normal;
   font-weight: 700;
   line-height: 160%;
+  width: 80%;
   letter-spacing: 0.36px;
 }
 .about__text-wrapper{
@@ -681,7 +695,7 @@ img{
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 250px;
+  width: 300px;
 }
 .footer{
   text-align: center;
