--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ img{
 .main__image-wrapper{
   margin: -30px 0 25px 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 .main__getstudy{
@@ -131,7 +131,7 @@ img{
   font-weight: 600;
 }
 .why{
-  margin-bottom: 41px;
+  margin-bottom: 40px;
 }
 .why__wrapper{
   display: flex;
@@ -155,7 +155,7 @@ img{
 .why__info{
   color: #201E1E;
   font-family: 'Forum';
-  font-size: 22px;
+  font-size: 19px;
   font-style: normal;
   font-weight: 400;
   line-height: 23px;
@@ -216,7 +216,7 @@ img{
 .makeups__title{
   padding: 10px 0;
   background-color: #e8cfca;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 .makeups__wrapper{
   display: flex;
@@ -302,12 +302,12 @@ img{
   margin-left: -55px;
 }
 .ways{
-  padding-bottom: 40px;
+  padding-bottom: 50px;
 }
 .ways__title{
+  margin-bottom: 30px;
   padding: 15px 0;
   background-color: #e8cfca;
-  margin-bottom: 20px;
 }
 .ways__title-wrapper{
   position: relative;
@@ -315,12 +315,11 @@ img{
   margin-bottom: 18px;
 }
 .ways__block-title{
-  color: #580520;
+  color: #9A0429;
   text-align: center;
   font-family: 'Arimo';
   font-size: 16px;
   font-weight: normal;
-  line-height: 160%;
   letter-spacing: 0.66px;
   text-transform: uppercase;
   position: absolute;
@@ -330,8 +329,9 @@ img{
   width: 100%;
 }
 .ways__info{
-  background-color: #e8cfca;
   margin-bottom: 28px;
+  padding: 6px 0;
+  background-color: #e8cfca;
 }
 .ways__info-text{
   color: #201E1E;
@@ -344,7 +344,7 @@ img{
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
-.ways__point{
+.ways__point:not(:last-child){
   margin-bottom: 30px;
 }
 .ways__point-title{
@@ -358,9 +358,9 @@ img{
   margin-bottom: 10px;
 }
 .ways__point-title span{
-  background-color: #e8cfca;
+  background-color: rgba(232, 207, 202, 0.4);
   padding: 5px 25px;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 .ways__point-list{
   border-left: 2px solid #EBD7D0;
@@ -405,12 +405,7 @@ img{
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px;
   text-transform: uppercase;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   background-color: #e8cfca;
 }
 .for__fig-wrapper{
@@ -645,7 +640,7 @@ img{
   letter-spacing: 0.51px;
   text-transform: uppercase;
   border-radius: 8px;
-  background: rgba(253, 198, 168, 0.56);
+  background: rgba(232, 207, 202, 0.7);
   margin-bottom: 20px;
 }
 .price__text-extra{
