--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ img{
 }
 .header__logo{
   width: 30%;
+  transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.header__logo:hover{
+  transform: rotate(360deg);
 }
 .header__title{
   font-weight: 400;
